--- a/.github/workflows/tnr.yaml
+++ b/.github/workflows/tnr.yaml
@@ -20,5 +20,6 @@ jobs:
           flyway-migration: 'test/migration'
           init-script: 'test/init.sql'
           report-path: 'out/dblinter.sarif'
+          pr-comment: 'true'
 
 
