--- a/action.yml
+++ b/action.yml
@@ -43,6 +43,11 @@ inputs:
     default: ${{ github.token }}
     required: false
 
+  exclude:
+    description: "List of tables to exclude from the analysis"
+    required: false
+    default: ""
+
 outputs:
   sarif-report:
     description: "sarif where the report is stored"
